--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta name="google-site-verification" content="gMGUYzWE-_8Gm8dUexz-mowfTjAzpYL80_eUPJNSj5Y" />
+<meta name="google-site-verification" content="gMGUYzWE-_8Gm8dUexz-mowfTjAzpYL80_eUPJNSj5Y" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Musical world 🎻</title>
